# rs-movies-crud-rest-api

./: Cargo.toml
src/: main.rs
thunder-tests/: thunderActivity.json
