[package]
name = "rs-movies-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rand = "0.8.5"
serde = { version = "1.0.177", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
